bonus/confs/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: gitlab
spec:
  selector:
    app: gitlab-ce
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer

# apiVersion: v1
# kind: Service
# metadata:
#   name: gitlab-service
#   namespace: gitlab
# spec:
#   selector:
#     app: gitlab-ce
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 80
#     nodePort: 30080
#   type: NodePort
